--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -5,13 +5,16 @@
   <meta charset="utf-8" />
   <title>Game</title>
   <script type="text/javascript" src="./bundle.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
   <div id="game"></div>
   {{message }}
 
-  
+  <script>var socket = io();</script>
+
+
 </body>
 
 </html>
