basic tailored tilemap

--- a/src/views/game.hbs
+++ b/src/views/game.hbs
@@ -11,9 +11,7 @@
 <body>
   <div id="game"></div>
   {{message }}
-
-  <script>var socket = io();</script>
-
+ <!-- <script>var socket = io();</script> -->
 
 </body>
 
