--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -3,15 +3,31 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Game</title>
-  <script type="text/javascript" src="./bundle.js"></script>
+  <title>Homepage</title>
 </head>
 
 <body>
-  <div id="game"></div>
+
+
   {{message }}
 
-  
+
+  <form action="/auth/register" method="post">
+    <label for="username">Username:</label><br>
+    <input type="text" id="username" name="username" value="Username"><br><br>
+    <label for="pwd">Password:</label><br>
+    <input type="password" id="pwd" name="password"><br><br>
+    <input type="submit" value="Submit">
+  </form>
+
+
+<body>
+  <div id="menu">
+    <ul>
+  <li><button onclick="document.location='/game'">Play</button></li>
+</ul>
+  </div>
+
 </body>
 
 </html>
