init switch to mongoose

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -13,15 +13,14 @@
 
 
   <form action="/auth/register" method="post">
-    <label for="username">Username:</label><br>
-    <input type="text" id="username" name="username" value="Username"><br><br>
+    <label for="name">Username:</label><br>
+    <input type="text" id="username" name="name" value="Username"><br><br>
     <label for="pwd">Password:</label><br>
     <input type="password" id="pwd" name="password"><br><br>
     <input type="submit" value="Submit">
   </form>
 
 
-<body>
   <div id="menu">
     <ul>
   <li><button onclick="document.location='/game'">Play</button></li>
